--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,9 @@ rust:
 matrix:
   allow_failures:
     - rust: nightly
-  fast_finish: true
+before_script:
+  - rustup component add rustfmt-preview
+script:
+  - cargo test --verbose --features serde
+  - cargo doc --no-deps --features serde
+  - cargo fmt --all -- --check
